Better and working UI

--- a/src/main/resources/static/csr/partners.html
+++ b/src/main/resources/static/csr/partners.html
@@ -10,9 +10,6 @@
 <body>
 <nav>
     <ul>
-        <li><a href="/csr/index.html">Entries</a></li>
-        <li><a href="/csr/categories.html">Categories</a></li>
-        <li><a href="/csr/tags.html">Tags</a></li>
         <li><a href="/csr/claims.html">Claims</a></li>
         <li><a href="/csr/claim-handlers.html">Claim Handlers</a></li>
         <li><a href="/csr/customers.html">Customers</a></li>
@@ -20,7 +17,7 @@
         <li><a href="/csr/vertraege.html">Vertraege</a></li>
     </ul>
 </nav>
-<h2>Manage Partners</h2>
+<h2  style="text-align: center;">Manage Partners</h2>
 <form id="partnerForm">
     <input type="hidden" name="partnerId" />
     <label for="name">Name</label>
